# efficient-sumcheck

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: bench.yml  ci.yml  rust.yml
benches/: arithmetic_backend.rs  cast_bench.rs  experimental_benches.rs  extension_arithmetic.rs  extension_benches.rs  prime_field_arithmetic.rs  provers.rs  simd_vs_generic.rs  small_fields_benches.rs  sumcheck.rs
benches/lag-poly-benches/: Cargo.toml
benches/sumcheck-benches/: Cargo.toml  run_benches.sh
benches/sumcheck-benches/src/: main.rs
benches/sumcheck-benches/src/validation/: mod.rs
dev/bench-avx512/: data.js
dev/bench-scalar/: data.js
docs/: compatibility.md  design.md  migration.md  slides.md
examples/: fpconfig.rs  sumcheck_micro.rs  whir_port_micro.rs
fields_macro/: Cargo.toml
fields_macro/src/: lib.rs  montgomery_backend.rs  standard_backend.rs  utils.rs
src/: coefficient_sumcheck.rs  field.rs  fold.rs  folding.rs  inner_product_sumcheck.rs  lib.rs  macros.rs  multilinear_sumcheck.rs  poly_ops.rs  proof.rs  runner.rs  simd_ops.rs  sumcheck_prover.rs  verifier.rs  whir_sumcheck.rs
src/experimental/: inner_product.rs  mod.rs  product.rs  sumcheck.rs
src/experimental/duplex_sponge/: mod.rs
src/experimental/fiat_shamir/: bench.rs
src/experimental/goldilocks/: constants.rs  evaluate_bf.rs  evaluate_ef.rs  mod.rs  reduce_bf.rs  reduce_ef.rs  sumcheck.rs  utils.rs
src/experimental/goldilocks/arithmetic/: add.rs  mod.rs  mul.rs  sub.rs
src/experimental/m31/: evaluate_bf.rs  evaluate_ef.rs  mod.rs  reduce_bf.rs  reduce_ef.rs  sumcheck.rs
src/experimental/m31/arithmetic/: mul.rs  sub.rs
src/experimental/transcript/: mod.rs  sanity_transcript.rs  spongefish.rs  transcript.rs
src/fields/: const_helpers.rs  field.rs  fp_backend.rs  from.rs  mod.rs  ops.rs  serialize.rs  small_fp_backend.rs
src/fields/m31/: field.rs
src/hypercube/: core.rs  eq_evals.rs  hypercube.rs  hypercube_member.rs  iter.rs  mod.rs
src/interpolation/: lagrange_polynomial.rs
src/messages/: verifier_messages.rs
src/multilinear/: mod.rs  sumcheck.rs
src/multilinear/provers/blendy/: config.rs  core.rs  mod.rs  prover.rs
src/multilinear/provers/space/: config.rs  core.rs  mod.rs  prover.rs
src/multilinear/provers/time/: config.rs  core.rs  mod.rs  prover.rs  time.rs
src/multilinear/provers/time/reductions/: mod.rs  pairwise.rs  tablewise.rs  variablewise.rs
src/multilinear_product/: mod.rs  sumcheck.rs
src/multilinear_product/provers/blendy/: blendy.rs  config.rs  core.rs  mod.rs  prover.rs
src/multilinear_product/provers/space/: config.rs  core.rs  mod.rs  prover.rs
src/multilinear_product/provers/time/: config.rs  core.rs  mod.rs  prover.rs  time.rs
src/multilinear_product/provers/time/reductions/: mod.rs  pairwise.rs  variablewise.rs
src/order_strategy/: core.rs  mod.rs  order_strategy.rs
src/order_strategy/ascending/: ascending.rs  core.rs  mod.rs
src/order_strategy/descending/: core.rs  descending.rs  mod.rs
src/order_strategy/graycode/: core.rs  graycode.rs  mod.rs
src/order_strategy/lexicographic/: core.rs  mod.rs
src/order_strategy/msb/: core.rs  mod.rs  msb.rs
src/order_strategy/significant_bit/: core.rs  mod.rs
src/polynomial/: dense.rs  eval.rs  mod.rs  sequential_lagrange.rs
src/prover/: core.rs  mod.rs
src/provers/: coefficient.rs  coefficient_lsb.rs  eq_factored.rs  gkr.rs  inner_product.rs  inner_product_lsb.rs  mod.rs  multilinear.rs  multilinear_lsb.rs
src/reductions/: mod.rs  pairwise.rs  tablewise.rs
src/simd_fields/: mod.rs
src/simd_fields/goldilocks/: avx512.rs  bridge.rs  mod.rs  mont_neon.rs  neon.rs
src/simd_sumcheck/: dispatch.rs  evaluate.rs  micro_bench.rs  mod.rs  prove.rs  reduce.rs
src/streams/: mod.rs  stream.rs  stream_iterator.rs
src/streams/file/: mod.rs
src/streams/memory/: core.rs  mod.rs
src/tests/: fields.rs  fields_test.rs  mod.rs  montgomery_integration.rs  polynomials.rs
src/tests/multilinear/: mod.rs  sanity.rs
src/tests/multilinear/provers/: mod.rs
src/tests/multilinear/provers/basic/: config.rs  core.rs  mod.rs  prover.rs
src/tests/multilinear_product/: consistency.rs  sanity.rs
src/tests/multilinear_product/provers/basic/: core.rs  mod.rs  prover.rs
src/transcript/: mod.rs  sanity.rs  spongefish.rs  transcript.rs
src/wip/: mod.rs
src/wip/duplex_sponge/: mod.rs
src/wip/f16/: arithmetic.rs  mod.rs
src/wip/fiat_shamir/: bench.rs  fiat_shamir.rs  mod.rs
src/wip/m31/: arithmetic.rs  arithmetic_old.rs  evaluate_bf.rs  evaluate_ef.rs  experiment.rs  mod.rs  reduce_bf.rs  reduce_ef.rs  sumcheck.rs
src/wip/m31/arithmetic/: add.rs  mul.rs  sub.rs
src/wip/m31/vectorized_reductions/: pairwise.rs
tests/: adversarial_verifier.rs  canonical_api.rs  inner_product_sumcheck.rs  multilinear_sumcheck.rs  plonky3_roundtrip.rs  whir_sumcheck.rs
