[package]
name = "efficient-sumcheck"
version = "0.0.2"
authors = ["arkworks maintainers"]
description = "TODO"
repository = "https://github.com/compsec-epfl/space-efficient-sumcheck"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
ark-std ="0.5.0"
memmap2 = "0.9.5"
nohash-hasher = "0.2.0"
rayon = { version = "1.10", optional = true }
spongefish = { git = "https://github.com/arkworks-rs/spongefish", rev="fce4bfed23b2deb9a9f174178b6c9f59f580cc81" }
spongefish-poseidon = { git = "https://github.com/arkworks-rs/spongefish", package = "spongefish-poseidon", features = ["bls12-381"], rev = "fce4bfed23b2deb9a9f174178b6c9f59f580cc81" }

[dev-dependencies]
criterion = "0.7"

[features]
default = ["parallel"]
parallel = [
  "dep:rayon",
  "ark-ff/parallel",
  "ark-poly/parallel",
  "ark-std/parallel",
]

[[bench]]
name = "provers"
path = "benches/provers.rs"
harness = false
