[package]
name = "effsc"
version = "0.0.2"
authors = ["arkworks maintainers"]
description = "TODO"
repository = "https://github.com/compsec-epfl/space-efficient-sumcheck"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"
rust-version = "1.81"

[dependencies]
ark-ff = { version = "0.5.0", optional = true }
ark-poly = { version = "0.5.0", optional = true }
ark-serialize = { version = "0.5.0", optional = true }
ark-std = { version = "0.5.0", optional = true }
memmap2 = "0.9.5"
nohash-hasher = "0.2.0"
rayon = { version = "1.10", optional = true }
spongefish = { git = "https://github.com/z-tech/spongefish.git", branch = "smallfp-support", features = ["ark-ff"], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
criterion = "0.8"
p3-field = "0.5"
p3-goldilocks = "0.5"

[features]
default = ["arkworks", "parallel", "simd"]
arkworks = [
  "dep:ark-ff",
  "dep:ark-poly",
  "dep:ark-serialize",
  "dep:ark-std",
  "dep:spongefish",
]
simd = []
parallel = [
  "dep:rayon",
  "ark-ff?/parallel",
  "ark-poly?/parallel",
  "ark-std?/parallel",
]

[[bench]]
name = "sumcheck"
path = "benches/sumcheck.rs"
harness = false

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", branch = "master" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", branch = "master" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git", branch = "master" }
spongefish = { git = "https://github.com/z-tech/spongefish.git", branch = "smallfp-support" }
