[package]
name = "effsc"
version = "0.0.2"
authors = ["arkworks maintainers"]
description = "A library for the sumcheck protocol with SIMD acceleration and streaming support"
repository = "https://github.com/compsec-epfl/space-efficient-sumcheck"
homepage = "https://github.com/compsec-epfl/space-efficient-sumcheck"
documentation = "https://docs.rs/effsc/"
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "sumcheck", "zero-knowledge", "arkworks"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"
rust-version = "1.81"

[dependencies]
ark-ff = { version = "0.6.0", optional = true }
ark-poly = { version = "0.6.0", optional = true }
ark-serialize = { version = "0.6.0", optional = true }
ark-std = { version = "0.6.0", optional = true }
memmap2 = "0.9.5"
nohash-hasher = "0.2.0"
rayon = { version = "1.10", optional = true }
spongefish = { git = "https://github.com/z-tech/spongefish.git", branch = "smallfp-support", features = ["ark-ff"], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
criterion = "0.8"
p3-field = "0.5"
p3-goldilocks = "0.5"

[features]
default = ["arkworks", "parallel", "simd"]
arkworks = [
  "dep:ark-ff",
  "dep:ark-poly",
  "dep:ark-serialize",
  "dep:ark-std",
  "dep:spongefish",
]
simd = []
parallel = [
  "dep:rayon",
  "ark-ff?/parallel",
  "ark-poly?/parallel",
  "ark-std?/parallel",
]

[[bench]]
name = "sumcheck"
path = "benches/sumcheck.rs"
harness = false

[patch.crates-io]
spongefish = { git = "https://github.com/z-tech/spongefish.git", branch = "smallfp-support" }
