[package]
name = "lag-poly-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { git = "https://github.com/benbencik/algebra", branch = "small_fp", package = "ark-ff" }
ark-poly = { git = "https://github.com/benbencik/algebra", branch = "small_fp", package = "ark-poly" }
ark-serialize = { git = "https://github.com/benbencik/algebra", branch = "small_fp", package = "ark-serialize" }
ark-bn254 = "0.5.0"
space-efficient-sumcheck = { path = "../../." }

